topic/kubernetes/infra/prod/infra/nacos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nacos
  labels:
    app: nacos
  namespace: infra
spec:
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 9848
      name: client-rpc
      targetPort: 9848
    - port: 9849
      name: raft-rpc
      targetPort: 9849
    ## 兼容1.4.x版本的选举端口
    - port: 7848
      name: old-raft-rpc
      targetPort: 7848
  selector:
    app: nacos
