topic/kubernetes/infra/prod/infra/nacos/nacos-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nacos
  namespace: infra
spec:
  ingressClassName: nginx-prod
  rules:
  - host: kubenacos.cici.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nacos
            port:
              number: 8848
